fix(work): remove view transitions for media elements on mobile

--- a/src/app/work/[slug]/page.module.css
+++ b/src/app/work/[slug]/page.module.css
@@ -122,4 +122,9 @@
     opacity: 1;
     outline: none;
   }
+
+  .media,
+  .image {
+    view-transition-name: var(--vt-name);
+  }
 }
